compiler/testData/diagnostics/tests/incompleteCode/unresolvedOperation.kt
fun foo(a: Int) {
    <!DEBUG_INFO_MISSING_UNRESOLVED!>!<!><!UNRESOLVED_REFERENCE!>bbb<!>
    <!UNRESOLVED_REFERENCE!>bbb<!> <!DEBUG_INFO_MISSING_UNRESOLVED!>+<!> a
}